# kgserver

./: .dockerignore  .flake8  .gitignore  .pylintrc  DOCKER_COMPOSE_GUIDE.md  DOCKER_SETUP.md  Dockerfile  GRAPHQL_VIBES.md  LICENSE  MCP_GQL_WRAPPER.md  README.md  bundle_loader.py  bundle_schema.py  docker-compose.yml  lint.sh  main.py  mkdocs.yml  push_main.sh  pyproject.toml  test.db  validation.py
.github/workflows/: test.yml
docs/: architecture.md  index.md
query/: API_ARCHITECTURE.md  README.md  bundle.py  bundle_loader.py  client.py  graphql_examples.py  graphql_schema.py  server.py  storage_factory.py
query/routers/: rest_api.py
storage/: NEO4J_COMPATIBILITY.md  README.md  __init__.py  interfaces.py
storage/backends/: README.md  __init__.py  postgres.py  sqlite.py
storage/models/: README.md  __init__.py  bundle.py  entity.py  relationship.py
tests/: conftest.py  test_bundle.py  test_bundle_loader.py  test_graphql_schema.py  test_rest_api.py  test_storage_backends.py  test_storage_factory.py
